--- a/views/details.ejs
+++ b/views/details.ejs
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Details</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="https://kit.fontawesome.com/9e350f0727.js" crossorigin="anonymous"></script>
+    <title>Triunfo Store</title>
 </head>
 <body>
-    <h1>Details</h1>
+    <%- include('./partials/header.ejs') %> 
+    <main>
+        <section id="card_conteiner">
+
+            
+
+
+        </section>
+    </main>
+    <%- include('./partials/footer.ejs') %>
 </body>
 </html>
