--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,6 +39,41 @@ main {
     min-height: 80%;
 }
 
+section#card_conteiner {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 32px;
+    padding: 16px;
+    gap: 16px;
+}
+
+section article.cards{
+    height: 250px;
+    width: 200px;
+    border: 1px solid rgb(255, 255, 255);
+}
+
+article.cards div.cards_img {
+    display: flex;
+    height: 90%;
+    border: 1px solid rgb(255, 255, 255);
+}
+
+article.cards div.cards_img img{
+    height: 100%;
+    width: 100%;
+}
+
+
+article.cards div.cards_name {
+    display: flex;
+    justify-content: center;
+    height: 10%;
+}
+
+
+
 footer {
     height: 10%;
     background-color: #272727;
