--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,18 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://kit.fontawesome.com/9e350f0727.js" crossorigin="anonymous"></script>
-    <title> Catalog soccer boots </title>
+    <title> Triunfo Store </title>
 </head>
 <body>
     <%- include('./partials/header.ejs') %> 
         
     <main>
 
-        <section>
-
+        <section id="card_conteiner">
             <% cleats.forEach(element => { %>
-                <%= element.model_name %>
-           <% }) %>
+                <a href="/details/<%= element.id %>">
+                <article class="cards">
+                    <div class="cards_img">
+                        <img src="<%= element.link_img %>" alt="<%= element.model_name %>">
+                    </div>
+                    <div class="cards_name">
+                        <%= element.model_name %>
+                    </div>
+                </article>
+                </a>
+           <% }) %>         
 
         </section>
 
