--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,10 @@
+<script src="https://kit.fontawesome.com/9e350f0727.js" crossorigin="anonymous"></script>
+
 <header> 
     <nav> 
         <ul> 
-            <a> <li> <i class="fa-solid fa-house "></i> Index </li> </a>
-            <a> <li> <i class="fa-solid fa-circle-plus"></i> Create </li> </a>
+            <a href="/"> <li> <i class="fa-solid fa-house "></i> Home </li> </a>
+            <a href="/create"> <li> <i class="fa-solid fa-circle-plus"></i> Create </li> </a>
         </ul>
     </nav>
 </header>
