--- a/views/details.ejs
+++ b/views/details.ejs
@@ -11,11 +11,54 @@
 <body>
     <%- include('./partials/header.ejs') %> 
     <main>
-        <section id="card_conteiner">
+        <div id="sub_header">
+            <%= soccer_boots_details.model_name %>
+        </div>
+        <section id="details_conteiner">
 
-            
+            <div class="cards_img">
+                <img src="<%= soccer_boots_details.link_img %>" alt="">
+            </div>
+            <table>
+                <thead>
+                    <th colspan="2"> Details <th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td> Brand: </td>
+                        <td> <%= soccer_boots_details.brand_name %> </td>
+                    </tr>
+                    <tr>
+                        <td> Description </td>
+                        <td> <%= soccer_boots_details.description %> </td>
+                    </tr>
+                    <tr>
+                        <td> Available sizes </td>
+                        <td> <%= soccer_boots_details.size %> </td>
+                    </tr>
+                        <td> Price </td>
+                        <td> <%= soccer_boots_details.value %></td>
+                </tbody>
+                <tfoot></tfoot>
+            </table>
 
 
+            <!-- <table class="cards_name">
+                <thead>
+                    <th> Details </th>
+                </thead>
+                <tbody> 
+                    <td>
+                        <tr> 1 </tr>
+                        <tr> 2 </tr>
+                    </td> 
+                </tbody>
+                <tfoot></tfoot>
+                <!-- <%= soccer_boots_details.brand_name %>
+            <%= soccer_boots_details.description %>
+            <%= soccer_boots_details.value %>
+            <%= soccer_boots_details.size %> -->
+            </table> -->
         </section>
     </main>
     <%- include('./partials/footer.ejs') %>
