--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
                 </a>
                 <div class="btn_conteiner">
                 <a href="/delete/ <%= element.id %>"><i class="fa-solid fa-trash-can"></i></a>
-                <a href="/edit"><i class="fa-solid fa-pen"></i></a>
+                <a href="/edit/ <%= element.id %> "><i class="fa-solid fa-pen"></i></a>
                 </div>
            <% }) %>         
 
