--- a/views/details.ejs
+++ b/views/details.ejs
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="/img/21232125_159822007929751_7027399478433807117_n.jpg">
     <script src="https://kit.fontawesome.com/9e350f0727.js" crossorigin="anonymous"></script>
-    <title>Triunfo Store</title>
+    <title>Chuteiras JM</title>
 </head>
 <body>
     <%- include('./partials/header.ejs') %> 
