--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/img/21232125_159822007929751_7027399478433807117_n.jpg">
     <link rel="stylesheet" href="/css/style.css">
-    <title> Edit </title>
+    <title> Chuteiras JM </title>
 </head>
 <body>
     <%- include('./partials/header.ejs') %> 
@@ -15,7 +16,7 @@
           
             <h2>Edit your favorite boot </h2>
     
-            <form method="post" action="/edit/<%= soccer_boots_edit.id %>">
+            <form method="post" action="/edit/<%= soccer_boots_edit.id %> ">
                 <legend> Editing the Soccer Boots <%= soccer_boots_edit.model_name %>  </legend>
                
                 <label for="model_name">Model name: :</label>
