--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,11 @@
 <script src="https://kit.fontawesome.com/9e350f0727.js" crossorigin="anonymous"></script>
 
+
+
 <header> 
+
+    <h1><img id="logo" src="\img\21232125_159822007929751_7027399478433807117_n-removebg-preview.png" alt="Shop"></h1>
+
     <nav> 
         <ul> 
             <a href="/"> <li> <i class="fa-solid fa-house "></i> Home </li> </a>
