--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,7 @@ body {
     height: 100vh;
     width: 100vw;
     max-width: 100%;
-    background-color: #000;
+    background-color: rgb(0, 0, 0);
     color: #fff;
     font-family: 'Digital';
 }
@@ -23,8 +23,8 @@ body {
 header {
     display: flex;
     justify-content: center;
-    height: 10%;
-    background-color: #272727;
+    height: 20%;
+    background-color: #000000;
 }
 
 header nav ul {
@@ -40,8 +40,12 @@ header nav {
     align-items: center;
 }
 
+header img#logo {
+    height: 100%;
+  }
+
 main {
-    min-height: 80%;
+    min-height: 70%;
 }
 
 main div#sub_header {
@@ -57,7 +61,7 @@ table {
 }
 
 table tr{
-    background-color: #272727;
+    background-color: #000000;
 }
 
 section#create{
@@ -86,7 +90,7 @@ section#create form input {
 
   section#create form button {
     color: #ffffff;
-    background-color: #272727;
+    background-color: #000000;
     height: 80px;
     width: auto;
     line-height: 0;
@@ -158,6 +162,6 @@ div.btn_conteiner {
 
 footer {
     height: 10%;
-    background-color: #272727;
+    background-color: #000000;
 }
 
