--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="icon" href="/img/21232125_159822007929751_7027399478433807117_n.jpg">
     <link rel="stylesheet" href="/css/style.css">
-    <title> Triunfo Store </title>
+    <title> Chuteiras JM </title>
 </head>
 <body>
     <%- include('./partials/header.ejs') %> 
@@ -37,5 +39,6 @@
     </main>
         
     <%- include('./partials/footer.ejs') %>
+    
 </body>
 </html>
