--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,8 +45,22 @@ header img#logo {
   }
 
 main {
+    display: flex;
+    justify-content: center;
     min-height: 70%;
 }
+
+@media (max-width: 395px) {
+    #create{
+        max-width: 100%;
+
+    }
+
+    form.form{
+        max-width: 90%;
+        }
+}
+
 
 main div#sub_header {
     display: flex;
@@ -64,14 +78,19 @@ table tr{
     background-color: #000000;
 }
 
-section#create{
+section#create form fieldset {
+    width: 100%;
+    padding: 0% 10%;
+}
+
+
+section#create {
     display: flex;
     flex-direction: column; 
     width: 500px;
     gap: 24px;
     height: 100%;
 }
-
 
 section#create form input {
     width: 85%;
