--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,11 @@
 <footer>
-    <h1>Footer</h1>
-</footer>
+    <p>
+        <a href="https://www.instagram.com/jayymeson/" target="_blank"
+        >> <img src="https://img.icons8.com/color/30/000000/linkedin-circled--v1.png"/></a>
+    </p>
+    <p>
+        <a href="https://www.linkedin.com/in/jaymesonmendes/" target="_blank"
+        >> <img src="https://img.icons8.com/color/30/000000/instagram-new--v1.png"/></a>
+
+    </p>
+    </footer>
